--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="image">
             <img src="Images/background.svg" alt="">
-    </section>
+        </div>
     <!------------------------------------------------------>
     <section class="protect" id="protect">
         <h1 class="heading">Take steps to <span> Protect </span> yourself and your dear ones</h1>
@@ -78,7 +78,6 @@
                 <a href="test_covid19.html" class="btn">Learn More</a>
             </div>
         </div>
-    </section>
     <!---------------------------------------------------------------------------->
     <section class="symtoms" id="symtoms">
         <div class="content">
@@ -100,7 +99,6 @@
         <div class="image">
             <img src="Images/symtoms.png" alt="">
         </div>
-    </section>
     <!------------------------------------------------------------------------->
     <section class="precautions" id="precautions">
         <div class="row">
@@ -132,13 +130,11 @@
                 <img src="Images/precuations1.png" alt="">
             </div>
         </div>
-    </section>
     <!------------------------------------------------------------------------------>
     <section class="spread" id="spread">
         <h1 class="heading">How Covid-19<span> spreads </span> over the world</h1>
         <div class="image">
         </div>
-    </section>
     <!----------------------------------------------------------------------------->
     <section class="graph" id="graph">
         <h1>Cases across the globe</h1>
@@ -252,12 +248,10 @@
       
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha256-R4pqcOYV8lt7snxMQO/HSbVCFRPMdrhAFMH+vr9giYI=" crossorigin="anonymous"></script>
           <script src="chart.js"></script>
-    </section>
     <!------------------------------------------------------------------------------>
     <section class="grid" id="grid">
         <div class="image">
         </div>
-    </section>
     <!------------------------------------------------------------------------------>
     <section class="news" id="news">
         <h1 class="heading">Latest News Updates For Today</h1>
@@ -276,7 +270,6 @@
                 <br></br>
             </div>
         </div>
-    </section>
     <!----------------------------------------------------------------------------->
     <section class="footer">
         <div class="box-container">
@@ -342,7 +335,6 @@
         </div>
         <h1 class="credit"><a href="#">Developed By 2Way Infotech</a></h1>
     </section>
-
     <!---------------------------------->
     <a href="#home" class="scroll-top" aria-label="scroll-top-icon">
         <i class="fas fa-arrow-up"></i>
@@ -362,9 +354,7 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="index.js"></script>
-
-
-
+    </section>
     <!-------------------------------------------------------------------->
 </body>
 
